--- a/src/scss/layouts/_intro-content.scss
+++ b/src/scss/layouts/_intro-content.scss
@@ -261,6 +261,9 @@
 .device-sync-intro {
   position: relative;
   @include container-padding;
+  p {
+    margin: 0;
+  }
 }
 
 .device-syncing {
